# image-search

./: .dockerignore  .gitignore  README.md  app.py  docker-compose.yaml  inference_service.py  modal_app.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-cloudrun.yaml
cloud_storage/: __init__.py  gcloud.py  gcloud_storage.py  storage_interface.py
docker/: Dockerfile  base.dockerfile  base_dev.dockerfile  dev.dockerfile  function.dockerfile  inference.dockerfile
misc/: prepare_env.py
model_config/: BLIP.py  SigLIP.py  __init__.py
models/: BLIP.py  SigLIP.py  __init__.py
scripts/: config.json  initial_load.py  launch-triton.py  prepare_env.py  reddit_scraper.py
service/: app.py  modal_app.py
