[project]
name = "image-search"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "asyncpraw>=7.8.1",
    "fastapi>=0.121.1",
    "fastapi-limiter>=0.1.6",
    "gcloud-aio-auth>=5.4.2",
    "google-cloud-storage>=3.5.0",
    "grpcio>=1.76.0",
    "modal>=1.2.1",
    "pillow>=12.0.0",
    "pinecone>=7.3.0",
    "redis>=5.0.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "diagrams>=0.24.4",
    "notebook>=7.4.7",
]
